<resources>
    <string name="app_name">SpotiFylterMobile</string>
    <string name="attr_acousticness">Acousticness</string>
    <string name="attr_danceability">Danceability</string>
    <string name="attr_energy">Energy</string>
    <string name="attr_instrumentalness">Instrumentalness</string>
    <string name="attr_liveness">Liveness</string>
    <string name="attr_speechiness">Speechiness</string>
    <string name="attr_valence">Valence</string>
    <string name="api_connected">Spotify API successfully connected.</string>
    <string name="attribution">Made possible by</string>
    <string name="skipped_with_reason">Skipped. (%1$s)</string>
    <string name="track_mismatch_new_bounds">New bounds don\'t match track.</string>
    <string name="track_match_new_bounds">Current track matches new bounds.</string>
    <string name="no_playback">No playback detected.</string>
</resources>