<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".gui.MainActivity">

    <data>
        <import type="com.rafaelwitak.spotifyltermobile.util.AudioFeatureSetting.Collection"/>
        <import type="com.rafaelwitak.spotifyltermobile.util.AudioFeature"/>
        <variable
                name="settings"
                type="com.rafaelwitak.spotifyltermobile.util.AudioFeatureSetting.Collection"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="24dp"
                android:paddingVertical="16dp"
                android:background="@color/dark">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/acousticness_label"
                    android:labelFor="@id/acousticness_slider"
                    android:text="@string/attr_acousticness"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/acousticness_slider"
                    android:paddingTop="16dp"
                    tools:layout_editor_absoluteX="24dp"
                    android:textColor="@color/light"/>

            <com.google.android.material.slider.RangeSlider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/acousticness_slider"
                    android:tag="@{AudioFeature.ACOUSTICNESS}"
                    android:valueFrom="@{settings.acousticness.lowerBound}"
                    android:valueTo="@{settings.acousticness.lowerBound}"
                    android:stepSize="0.01"
                    app:layout_constraintTop_toBottomOf="@+id/acousticness_label"
                    app:layout_constraintBottom_toTopOf="@+id/danceability_label"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/danceability_label"
                    android:labelFor="@id/danceability_slider"
                    android:text="@string/attr_danceability"
                    app:layout_constraintTop_toBottomOf="@+id/acousticness_slider"
                    app:layout_constraintBottom_toTopOf="@+id/danceability_slider"
                    android:paddingTop="16dp"
                    tools:layout_editor_absoluteX="24dp"
                    android:textColor="@color/light"/>

            <com.google.android.material.slider.RangeSlider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/danceability_slider"
                    android:tag="@{AudioFeature.DANCEABILITY}"
                    android:valueFrom="@{settings.danceability.lowerBound}"
                    android:valueTo="@{settings.danceability.upperBound}"
                    android:stepSize="0.01"
                    app:layout_constraintTop_toBottomOf="@+id/danceability_label"
                    app:layout_constraintBottom_toTopOf="@+id/energy_label"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/energy_label"
                    android:labelFor="@id/energy_slider"
                    android:text="@string/attr_energy"
                    app:layout_constraintTop_toBottomOf="@+id/danceability_slider"
                    app:layout_constraintBottom_toTopOf="@+id/energy_slider"
                    android:paddingTop="16dp"
                    tools:layout_editor_absoluteX="24dp"
                    android:textColor="@color/light"/>

            <com.google.android.material.slider.RangeSlider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/energy_slider"
                    android:tag="@{AudioFeature.ENERGY}"
                    android:valueFrom="@{settings.energy.lowerBound}"
                    android:valueTo="@{settings.energy.upperBound}"
                    android:stepSize="0.01"
                    app:layout_constraintTop_toBottomOf="@+id/energy_label"
                    app:layout_constraintBottom_toTopOf="@+id/instrumentalness_label"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/instrumentalness_label"
                    android:labelFor="@id/instrumentalness_slider"
                    android:text="@string/attr_instrumentalness"
                    app:layout_constraintTop_toBottomOf="@+id/energy_slider"
                    app:layout_constraintBottom_toTopOf="@+id/instrumentalness_slider"
                    android:paddingTop="16dp"
                    tools:layout_editor_absoluteX="24dp"
                    android:textColor="@color/light"/>

            <com.google.android.material.slider.RangeSlider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/instrumentalness_slider"
                    android:tag="@{AudioFeature.INSTRUMENTALNESS}"
                    android:valueFrom="@{settings.instrumentalness.lowerBound}"
                    android:valueTo="@{settings.instrumentalness.upperBound}"
                    android:stepSize="0.01"
                    app:layout_constraintTop_toBottomOf="@+id/instrumentalness_label"
                    app:layout_constraintBottom_toTopOf="@+id/liveness_label"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/liveness_label"
                    android:labelFor="@id/liveness_slider"
                    android:text="@string/attr_liveness"
                    app:layout_constraintTop_toBottomOf="@+id/instrumentalness_slider"
                    app:layout_constraintBottom_toTopOf="@+id/liveness_slider"
                    android:paddingTop="16dp"
                    tools:layout_editor_absoluteX="24dp"
                    android:textColor="@color/light"/>

            <com.google.android.material.slider.RangeSlider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/liveness_slider"
                    android:tag="@{AudioFeature.LIVENESS}"
                    android:valueFrom="@{settings.liveness.lowerBound}"
                    android:valueTo="@{settings.liveness.upperBound}"
                    android:stepSize="0.01"
                    app:layout_constraintTop_toBottomOf="@+id/liveness_label"
                    app:layout_constraintBottom_toTopOf="@+id/speechiness_label"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/speechiness_label"
                    android:labelFor="@id/speechiness_slider"
                    android:text="@string/attr_speechiness"
                    app:layout_constraintTop_toBottomOf="@+id/liveness_slider"
                    app:layout_constraintBottom_toTopOf="@+id/speechiness_slider"
                    android:paddingTop="16dp"
                    tools:layout_editor_absoluteX="24dp"
                    android:textColor="@color/light"/>

            <com.google.android.material.slider.RangeSlider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/speechiness_slider"
                    android:tag="@{AudioFeature.SPEECHINESS}"
                    android:valueFrom="@{settings.speechiness.lowerBound}"
                    android:valueTo="@{settings.speechiness.upperBound}"
                    android:stepSize="0.01"
                    app:layout_constraintTop_toBottomOf="@+id/speechiness_label"
                    app:layout_constraintBottom_toTopOf="@+id/valence_label"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/valence_label"
                    android:labelFor="@id/valence_slider"
                    android:text="@string/attr_valence"
                    app:layout_constraintTop_toBottomOf="@+id/speechiness_slider"
                    app:layout_constraintBottom_toTopOf="@+id/valence_slider"
                    android:paddingTop="16dp"
                    tools:layout_editor_absoluteX="24dp"
                    android:textColor="@color/light"/>

            <com.google.android.material.slider.RangeSlider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/valence_slider"
                    android:tag="@{AudioFeature.VALENCE}"
                    android:valueFrom="@{settings.valence.lowerBound}"
                    android:valueTo="@{settings.valence.upperBound}"
                    android:stepSize="0.01"
                    app:layout_constraintTop_toBottomOf="@+id/valence_label"
                    tools:layout_editor_absoluteX="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>